clean up unused functions and blocks

--- a/Face_Landmarker.ipynb
+++ b/Face_Landmarker.ipynb
@@ -175,34 +175,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "83PEJNp9yPBU"
-   },
-   "source": [
-    "## Download test image\n",
-    "\n",
-    "Let's grab a test image that we'll use later. The image is from [Unsplash](https://unsplash.com/photos/mt2fyrdXxzk)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "id": "tzXuqyIBlXer"
-   },
-   "outputs": [],
-   "source": [
-    "# !wget -q -O image.png https://storage.googleapis.com/mediapipe-assets/business-person.png\n",
-    "\n",
-    "import cv2\n",
-    "\n",
-    "img = cv2.imread(\"image.png\")\n",
-    "# cv2.imshow(\"test\",img)\n",
-    "# cv2.waitKey(0)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
     "id": "Iy4r2_ePylIa"
    },
    "source": [
@@ -232,35 +204,7 @@
     "                                       output_face_blendshapes=True,\n",
     "                                       output_facial_transformation_matrixes=True,\n",
     "                                       num_faces=1)\n",
-    "detector = vision.FaceLandmarker.create_from_options(options)\n",
-    "\n",
-    "# STEP 3: Load the input image.\n",
-    "image = mp.Image.create_from_file(\"image.png\")\n",
-    "\n",
-    "# STEP 4: Detect face landmarks from the input image.\n",
-    "detection_result = detector.detect(image)\n",
-    "# STEP 5: Process the detection result. In this case, visualize it.\n",
-    "annotated_image = draw_landmarks_on_image(image.numpy_view(), detection_result)\n",
-    "# cv2.imshow(\"result\", cv2.cvtColor(annotated_image, cv2.COLOR_RGB2BGR))\n",
-    "# cv2.waitKey(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# test block\n",
-    "# plot_face_blendshapes_bar_graph(detection_result.face_blendshapes[0])\n",
-    "# print(len((detection_result.face_blendshapes)))\n",
-    "\n",
-    "face_blendshapes_names = [face_blendshapes_category.category_name for face_blendshapes_category in detection_result.face_blendshapes[0]]\n",
-    "face_blendshapes_scores = [face_blendshapes_category.score for face_blendshapes_category in detection_result.face_blendshapes[0]]\n",
-    "# face_blendshapes_names = np.array(face_blendshapes_names)\n",
-    "# face_blendshapes_scores = np.array(face_blendshapes_scores)\n",
-    "# print(face_blendshapes_names[10])\n",
-    "\n"
+    "detector = vision.FaceLandmarker.create_from_options(options)"
    ]
   },
   {
@@ -7480,13 +7424,6 @@
    "source": [
     "#(detection_result.facial_transformation_matrixes)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
