combine landmarkers completed

--- a/GestureRecognizer/gesture_recognizer.ipynb
+++ b/GestureRecognizer/gesture_recognizer.ipynb
@@ -195,6 +195,52 @@
     "\n",
     "display_batch_of_images_with_gestures_and_hand_landmarks(images, results)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import mediapipe as mp\n",
+    "mp_drawing = mp.solutions.drawing_utils\n",
+    "mp_drawing_styles = mp.solutions.drawing_styles\n",
+    "mp_hands = mp.solutions.hands\n",
+    "\n",
+    "# For webcam input:\n",
+    "cap = cv2.VideoCapture(0, cv2.CAP_DSHOW)\n",
+    "with mp_hands.Hands(\n",
+    "    model_complexity=1,\n",
+    "    min_detection_confidence=0.5,\n",
+    "    min_tracking_confidence=0.5) as hands:\n",
+    "  while cap.isOpened():\n",
+    "    success, image = cap.read()\n",
+    "    if not success:\n",
+    "      # print(\"Ignoring empty camera frame.\")\n",
+    "      # If loading a video, use 'break' instead of 'continue'.\n",
+    "      continue\n",
+    "\n",
+    "    # To improve performance, optionally mark the image as not writeable to\n",
+    "    # pass by reference.\n",
+    "    image.flags.writeable = False\n",
+    "    image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
+    "    recognition_result = recognizer.recognize(image)\n",
+    "    results = hands.process(image)\n",
+    "    top_gesture = recognition_result.gestures[0][0]\n",
+    "    hand_landmarks = recognition_result.hand_landmarks\n",
+    "    # Draw the hand annotations on the image.\n",
+    "    image.flags.writeable = True\n",
+    "    image = cv2.cvtColor(image, cv2.COLOR_RGB2BGR)\n",
+    "    display_batch_of_images_with_gestures_and_hand_landmarks()\n",
+    "    # Flip the image horizontally for a selfie-view display.\n",
+    "    cv2.imshow('MediaPipe Hands', cv2.flip(image, 1))\n",
+    "    if cv2.waitKey(5) & 0xFF == ord('q'):  # press q to quit\n",
+    "        print(\"Exiting...\")          \n",
+    "        cap.release()\n",
+    "        cv2.destroyAllWindows()\n",
+    "        break"
+   ]
   }
  ],
  "metadata": {
