--- a/HandLandmarker/hand_lanmarker.ipynb
+++ b/HandLandmarker/hand_lanmarker.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Exiting...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cv2\n",
     "import mediapipe as mp\n",
@@ -29,7 +21,7 @@
     "  while cap.isOpened():\n",
     "    success, image = cap.read()\n",
     "    if not success:\n",
-    "      print(\"Ignoring empty camera frame.\")\n",
+    "      # print(\"Ignoring empty camera frame.\")\n",
     "      # If loading a video, use 'break' instead of 'continue'.\n",
     "      continue\n",
     "\n",
