preparing hand indicator

--- a/combined_lanmarker.ipynb
+++ b/combined_lanmarker.ipynb
@@ -141,6 +141,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def print_hands_status()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
@@ -189,10 +198,12 @@
     "\n",
     "# For webcam input:\n",
     "cap = cv2.VideoCapture(0, cv2.CAP_DSHOW)\n",
+    "\n",
     "with mp_hands.Hands(\n",
     "    model_complexity=1,\n",
     "    min_detection_confidence=0.5,\n",
     "    min_tracking_confidence=0.5) as hands:\n",
+    "  \n",
     "  while cap.isOpened():\n",
     "    success, frame = cap.read()\n",
     "    if not success:\n",
@@ -200,20 +211,17 @@
     "      # If loading a video, use 'break' instead of 'continue'.\n",
     "      continue\n",
     "\n",
-    "    # To improve performance, optionally mark the image as not writeable to\n",
-    "    # pass by reference.\n",
-    "    # frame.flags.writeable = False\n",
     "    raw_image = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
     "    cam_image = mp.Image(image_format=mp.ImageFormat.SRGB, data=frame)\n",
     "    face_results = faces.detect(cam_image)\n",
+    "\n",
     "    if len(face_results.face_blendshapes)==0 or len(face_results.face_landmarks)==0:\n",
     "      continue\n",
-    "    hands_results = hands.process(raw_image)\n",
-    "    \n",
-    "    # # Draw the hand annotations on the image.\n",
-    "    # frame.flags.writeable = True\n",
-    "    # image = cv2.cvtColor(image, cv2.COLOR_RGB2BGR)\n",
     "\n",
+    "    hands_results = hands.process(raw_image)\n",
+    "\n",
+    "    # if len(hands_results.face_blendshapes)==0 or len(hands_results.face_landmarks)==0:\n",
+    "    #   continue\n",
     "    # draw face landmarks\n",
     "    annotated_image = draw_landmarks_on_image(cam_image.numpy_view(), face_results)\n",
     "    \n",
@@ -228,9 +236,10 @@
     "            mp_drawing_styles.get_default_hand_landmarks_style(),\n",
     "            mp_drawing_styles.get_default_hand_connections_style())\n",
     "        \n",
-    "    # Flip the image horizontally for a selfie-view display.\n",
     "    cv2.namedWindow('cam', cv2.WINDOW_AUTOSIZE)\n",
     "    cv2.imshow(\"cam\", annotated_image)\n",
+    "    print_eyes_status(face_results.face_blendshapes[0])\n",
+    "    \n",
     "    if cv2.waitKey(5) & 0xFF == ord('q'):  # press q to quit\n",
     "        print(\"Exiting...\")          \n",
     "        cap.release()\n",
