--- a/Landmarker/combined_lanmarker.ipynb
+++ b/Landmarker/combined_lanmarker.ipynb
@@ -310,6 +310,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# version checking, uncomment if needed\n",
     "# import cv2\n",
     "\n",
     "# print(\"OpenCV version:\", cv2.__version__)\n",
